--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "parcel": "^2.0.0-rc.0",
     "parcel-bundler": "^1.12.5",
     "prettier": "^2.3.2"
+  },
+  "dependencies": {
+    "jquery": "^3.6.0"
   }
 }
